# netrin-challenge

./: .env.dev.example  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  up.dev.sh
api/data/interfaces/: __init__.py  google_scraper_interface.py  logging_interface.py
api/data/metrics/: metrics.py
api/data/scraper/: scraper.py
api/domain/use_cases/: __init__.py  metrics.py  scraper.py
api/infra/utils/: __init__.py  google_scraper.py  logging.py
api/main/adapter/: __init__.py  flask_adapter.py
api/main/composer/: __init__.py  metrics_composite.py  scraper_composite.py
api/main/configs/: app.py
api/main/interface/: __init__.py  route.py
api/main/routes/: __init__.py  api_route.py
api/presenters/controllers/: __init__.py  metrics_controller.py  scraper_controller.py
api/presenters/errors/: __init__.py  http_errors.py
api/presenters/helpers/: http_models.py
