[tool.poetry]
name = "netrin-challenge"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "netrin_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["async"], version = "^2.3.1"}
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
pylint = "^2.17.3"
types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
